--- a/_includes/teaching_entry.html
+++ b/_includes/teaching_entry.html
@@ -1,11 +1,22 @@
 <!-- _includes/teaching_entry.html -->
-<div class="teaching_entry" >
-    <table class="teaching_entry_table">
+<div class="teaching_entry" style="padding: 0.5cm" >
+    <table class="teaching_entry_table" style="width:100%">
         <tr>
-            <h2>{{entry.title}}</h2>
+            <td colspan="2"> {{entry.start_date | date: "%B %Y" }} </td>
+            <td></td>
         </tr>
         <tr>
-            <p>{{ entry }}</p>
+            <td colspan="2"> <h3>{{entry.title}}</h3> </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td style="width:50%" ><p>Role: {{entry.role}} </p> </td>
+            <td style="width:50%" ><p>Affiliation: {{entry.affiliation}} </p> </td>
+        </tr>
+        <tr>
+            <td colspan="2"> {{ entry }} </td>
+            <td></td>
         </tr>
     </table>
+    <hr>
 </div>
